--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
+            <p><span><img src="./img/malnet_logo_twocolor.png"/></span></p>
             <span class="subheading">Cybersecurity Visualized</span>
           </div>
         </div>
