--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/malnet_graph.gif')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="site-heading">
-            <p><span><img src="./img/malnet_logo.png"/></span></p>
-            <span class="subheading">Cybersecurity Visualized</span>
-          </div>
-        </div>
-      </div>
+  <div class="showcase">
+    <div class="examples">
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
     </div>
-  </header>
+  </div>
 
   <!-- Main Content -->
   <div class="container">
