--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
   </nav>
 
   <!-- Page Header -->
-  <div class="showcase">
-    <div class="examples">
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
-      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./images/about-bg.jpg')"> </a>
+  <div class="container">
+    <div class="showcase">
+      <div class="examples">
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      </div>
     </div>
   </div>
 
