--- a/index.html
+++ b/index.html
@@ -53,21 +53,26 @@
   </nav>
 
   <!-- Page Header -->
-    <div class="showcase">
-      <div class="examples">
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-        <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
-      </div>
+  <div class="malnet-title">
+    <strong>MalNet</strong>
+    " - Cybersecurity Visualized"
+  </div>
+  
+  <div class="showcase">
+    <div class="examples">
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
     </div>
+  </div>
 
   <!-- Main Content -->
   <div class="container">
