--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
   <!-- Page Header -->
   <div class="malnet-title">
-    <strong>MalNet</strong>
-    " - Cybersecurity Visualized"
+    <h1>
+      <strong>MalNet</strong> - Cybersecurity Visualized
+    </h1>
   </div>
   
   <div class="showcase">
