--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
       <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
       <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
       <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
+      <a class="preview" href="https://github.com/kevinli573/malnet-v1/tree/master/img" style="background-image: url('./img/about-bg.jpg')"> </a>
     </div>
   </div>
 
