--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <a class="nav-link" href="index.html">Explore</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Download</a>
+            <a class="nav-link" href="download.html">Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="post.html">Publications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
