--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>About</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <a class="nav-link" href="index.html">Explore</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Download</a>
+            <a class="nav-link" href="download.html">Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="post.html">Publications</a>
