--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="download.html">Download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Publications</a>
+            <a class="nav-link" href="publications.html">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
