--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="new-col-lg-8 new-col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About MalNet</h1>
           </div>
