--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">&copy; 2020 PoloClub of Data Science, Georgia Institute of Technology support@malware-net.org Copyright infringement</p>
         </div>
       </div>
     </div>
