--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/poloclub">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -121,7 +121,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">&copy; 2020 PoloClub of Data Science, Georgia Institute of Technology support@malware-net.org Copyright infringement</p>
+          <p class="copyright text-muted">Copyright &copy; 2020 Polo Club of Data Science @ Georgia Tech: support@malware-net.org Copyright infringement</p>
         </div>
       </div>
     </div>
