--- a/about.html
+++ b/about.html
@@ -56,13 +56,13 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/trojan_graph.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About MalNet</h1>
+            <h1 style="color: black">About MalNet</h1>
           </div>
         </div>
       </div>
