--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1 style="color: black">About MalNet</h1>
+            <h1>About MalNet</h1>
           </div>
         </div>
       </div>
