--- a/publications.html
+++ b/publications.html
@@ -55,11 +55,13 @@
     </div>
   </nav>
   <!-- Page Header -->
-  <div>
-    Publications
-  </div 
+  <header>
+    <div>Publications</div>
+  </header>
 
-  <!-- Post Content -->
+    
+  <!-- Main Content -->
+ 
   <div class="container">
     <div class="row">
       <div class="new-col-lg-8 new-col-md-10 mx-auto">
@@ -75,6 +77,9 @@
           </div>
           <div class="publication-card">
             Stuff 4 Here
+          </div>
+          <div class="publication-card">
+            Stuff 5 Here
           </div>
         </div>
       </div>
