--- a/publications.html
+++ b/publications.html
@@ -55,8 +55,17 @@
     </div>
   </nav>
   <!-- Page Header -->
-  <header>
-    <div>Publications</div>
+  <header class="masthead" style="background-image: url('img/trojan_graph.png')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h1>Publication</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
     
