--- a/publications.html
+++ b/publications.html
@@ -70,27 +70,20 @@
 
     
   <!-- Main Content -->
- 
   <div class="container">
     <div class="row">
       <div class="new-col-lg-8 new-col-md-10 mx-auto">
-        <div class="publication-card-container">
-          <div class="publication-card">
-            Stuff 1 Here
-          </div>
-          <div class="publication-card">
-            Stuff 2 Here
-          </div>
-          <div class="publication-card">
-            Stuff 3 Here
-          </div>
-          <div class="publication-card">
-            Stuff 4 Here
-          </div>
-          <div class="publication-card">
-            Stuff 5 Here
-          </div>
-        </div>
+        <div style="text-align: center"><strong>What is MalNet?</strong></div>
+        <p>MalNet is a novel cybersecurity dataset... Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        
+        <div style="text-align: center"><strong>How Was MalNet Created?</strong></div>
+        <p>MalNet was created through... Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
   </div>
