--- a/publications.html
+++ b/publications.html
@@ -89,6 +89,18 @@
           <div class="publication-card">
             Stuff 1 Here
           </div>
+          <div class="publication-card">
+            Stuff 2 Here
+          </div>
+          <div class="publication-card">
+            Stuff 3 Here
+          </div>
+          <div class="publication-card">
+            Stuff 4 Here
+          </div>
+          <div class="publication-card">
+            Stuff 5 Here
+          </div>
         </div>
       </div>
     </div>
