--- a/publications.html
+++ b/publications.html
@@ -39,10 +39,10 @@
             <a class="nav-link" href="index.html">Explore</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="download.html" style="color: gold;">Download</a>
+            <a class="nav-link" href="download.html">Download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="publications.html">Publications</a>
+            <a class="nav-link" href="publications.html" style="color: gold;">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -78,13 +78,7 @@
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
           ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        
-        <div style="text-align: center"><strong>How Was MalNet Created?</strong></div>
-        <p>MalNet was created through... Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        
+
         <div class="publication-card-container">
           <div class="publication-card">
             Stuff 1 Here
