--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <div class="row">
+    <div class="row" style="flex-wrap: nowrap !important;">
       <div class="new-col-lg-8 new-col-md-10 mx-auto">
         <div style="text-align: center"><strong>What is MalNet?</strong></div>
         <p>MalNet is a novel cybersecurity dataset... Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
