--- a/publications.html
+++ b/publications.html
@@ -76,26 +76,28 @@
         <br>
         <div class="publication-card-container">
           <div class="publication-card">
-            <div style="text-align: center;">Title of Project</div>
-            <div>Description of project. Text text text</div>
             <div>
-              <ul class="list-inline text-center">
-                <li class="list-inline-item">
-                  <a href="https://twitter.com/polodataclub">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://www.youtube.com/channel/UCGpO97KWw6qb8BATR-AWb1g">
-                    <i class="fab fa-youtube"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://github.com/poloclub">
-                    <i class="fab fa-github"></i>
-                  </a>
-                </li>
-              </ul>
+              <div style="text-align: center;">Title of Project</div>
+              <div>Description of project. Text text text</div>
+              <div>
+                <ul class="list-inline text-center">
+                  <li class="list-inline-item">
+                    <a href="https://twitter.com/polodataclub">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://www.youtube.com/channel/UCGpO97KWw6qb8BATR-AWb1g">
+                      <i class="fab fa-youtube"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/poloclub">
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="publication-card">
