--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
         <br>
         <div class="publication-card-container">
           <div class="publication-card">
-            <div>
+            <div class="card-info">
               <div style="text-align: center;">Title of Project</div>
               <div>Description of project. Text text text</div>
               <div>
@@ -101,16 +101,24 @@
             </div>
           </div>
           <div class="publication-card">
-            Stuff 2 Here
+            <div class="card-info">
+              Stuff 2 Here
+            </div>
           </div>
           <div class="publication-card">
-            Stuff 3 Here
+            <div class="card-info">
+              Stuff 3 Here
+            </div>
           </div>
           <div class="publication-card">
-            Stuff 4 Here
+            <div class="card-info">
+              Stuff 4 Here
+            </div>
           </div>
           <div class="publication-card">
-            Stuff 5 Here
+            <div class="card-info">
+              Stuff 5 Here
+            </div>
           </div>
         </div>
       </div>
