--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Explore</a>
+            <a class="nav-link" href="explore.html">Explore</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="download.html">Download</a>
