--- a/explore.html
+++ b/explore.html
@@ -58,8 +58,7 @@
   <div class="container">
     <div class="row" style="display: block !important;">
       <div class="new-col-lg-8 new-col-md-10 mx-auto">
-        <h2>Graph and Image Samples</h2>
-        <br>
+        <p style="font-size: 2em;">Graph and Image Samples</p>
         <p>This page shows just a slice of what our dataset has to offer... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
