--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Page Header -->
   <div class="malnet-title">
     <h1>
-      <strong>MalNet</strong> - Cybersecurity Visualized
+      <strong>MalNet</strong> - Cybersecurity Visualized, Test
     </h1>
   </div>
   
